# gw_team

./: Dockerfile  README.md  compose.yaml  entrypoint.sh  pyproject.toml
gw_team/: app.py  database.py  enums.py  permissions.py  security.py
gw_team/database/: appointments.py  users.py
gw_team/databasee/: users.py
gw_team/models/: __init__.py  modalities.py  models.py  user_modalities.py  users.py
gw_team/routers/: appointment.py  auth.py  users.py
gw_team/schemas/: appointments.py  filters.py  health_check.py  users.py
gw_team/security/: security.py  token.py
migrations/: env.py
migrations/versions/: 2224b5e4cf9f_remove_unique_constraint_e_renomeia_.py  305805ea388e_tabela_modalities_e_user_modalities.py  34ca8db5aa71_adicionando_coluna_disabled.py  365621fbeace_adicionando_coluna_user_type.py  40399a8eea66_mudando_o_tipo_da_modalidade_para_str.py  a675c636c627_criando_periodo_para_a_modalidade.py  a8b842953843_populando_tabela_modalities.py  abbb8b2c4d98_criando_tabela_users.py  af740ece1b01_adicionando_unicidade_para_o_nome_da_.py  b20f24d3e2ba_adicionando_tipo_de_usuario.py  cd0bb5260637_tabela_users.py  d103af87e544_alterando_nome_da_modalidade_jiu_jitsu_.py  e7acece56d6b_criando_tabela_appointments.py
tests/: conftest.py  faker.py  test_app.py  test_auth.py  test_database.py  test_security.py  test_users.py
tests/appointments/: test_create.py  test_delete.py  test_list.py
tests/users/: test_create.py  test_delete.py  test_read.py  test_update.py  test_update_pass.py
